[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Menus/fondo.png" type="Texture2D" id=1]
[ext_resource path="res://Sprites/Assets/black background.jpeg" type="Texture2D" id=2]
[ext_resource path="res://Sprites/Menus/7-1.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Menus/7-3.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Menus/7-2.png" type="Texture2D" id=5]
[ext_resource path="res://Scripts/YOUDIED!.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Menus/new_theme.tres" type="Theme" id=7]

[node name="YOUDIED!" type="Control"]
process_mode = 3
anchor_left = -0.023
anchor_top = -0.038
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.448
offset_top = -172.2
offset_right = -4.0
offset_bottom = -12.0
pivot_offset = Vector2( 1178, -435 )
theme = ExtResource( 7 )
script = ExtResource( 6 )

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color( 0.2, 0.227451, 0.309804, 0.878431 )
show_behind_parent = true
position = Vector2( 380, 232 )
scale = Vector2( 4.98065, 3.44497 )
texture = ExtResource( 2 )

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2( 371, 222 )
texture = ExtResource( 1 )

[node name="Moristeparce" type="Label" parent="Fondo"]
offset_left = -132.0
offset_top = -95.0
offset_right = 135.0
offset_bottom = -60.0
text = "YOU DIED!"
align = 1
valign = 1

[node name="btnReiniciar" type="TextureButton" parent="Fondo"]
process_mode = 3
offset_left = -90.0
offset_top = -7.0
offset_right = 90.0
offset_bottom = 33.0
focus_neighbor_bottom = NodePath("../btnMenu")
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="Salir al Menu" type="Label" parent="Fondo/btnReiniciar"]
offset_left = 3.0
offset_top = 2.0
offset_right = 180.0
offset_bottom = 33.0
text = "Reiniciar"
align = 1
valign = 1

[node name="btnMenu" type="TextureButton" parent="Fondo"]
offset_left = -90.0
offset_top = 40.0
offset_right = 90.0
offset_bottom = 80.0
focus_neighbor_top = NodePath("../btnReiniciar")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="Cerrar el Juego" type="Label" parent="Fondo/btnMenu"]
offset_left = 1.0
offset_top = 1.0
offset_right = 179.0
offset_bottom = 35.0
text = "Menu"
align = 1
valign = 1
autowrap = true

[node name="Label" type="Label" parent="Fondo"]
offset_left = -124.0
offset_top = -50.0
offset_right = 8.0
offset_bottom = -15.0
text = "Puntuacion: "

[node name="score" type="Label" parent="Fondo"]
offset_left = 8.0
offset_top = -50.0
offset_right = 139.0
offset_bottom = -10.0
text = "0"
autowrap = true

[connection signal="mouse_entered" from="Fondo/btnReiniciar" to="." method="_on_btnReiniciar_mouse_entered"]
[connection signal="pressed" from="Fondo/btnReiniciar" to="." method="_on_btnReiniciar_pressed"]
[connection signal="mouse_entered" from="Fondo/btnMenu" to="." method="_on_btnMenu_mouse_entered"]
[connection signal="pressed" from="Fondo/btnMenu" to="." method="_on_btnMenu_pressed"]
